# vlq-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: basic.rs
examples/: vlq-fast.rs  vlq.rs
src/: bigint.rs  fast.rs  lib.rs
